1998-01-14  Marcus G. Daniels  <mgd@wijiji.santafe.edu>

	* Frame.m ([Frame -drop]): Call archiverUnregister since we
	aren't calling [super drop].

1998-01-12  Marcus G. Daniels  <mgd@wijiji.santafe.edu>

	* ArchivedGeometryWidget.m (structure_proc): New function.  A
	handler for Structure changes to the widget (e.g. destruction).
	([ArchivedGeometryWidget -_notifyTargetAndDrop_]): New internal
	method called by above handler.
	([ArchivedGeometryWidget
	-setupDestroyNotification:notificationMethod:]):  Configures
	an event handler for structure changes, and sets the target
	and method for notification.

	* Raster.m ([Raster -drop]):  Remove. 

	* Raster.[hm]: Reformatting throughout.

	* Frame.m ([Frame -createEnd]): Minor reformatting.

	* Canvas.m ([Canvas -drop]): Remove; leave that to superclass.

	* Canvas.[hm]: Minor reformatting.

	* BLTGraph.m ([GraphElement -drop]): Leave destruction of widget
	to superclass.

	* BLTGraph.[hm]: Minor reformatting.

	* ArchivedGeometryWidget.m ([ArchivedGeometryWidget -drop]): 
	Destroy the parent widget on drop.

	* ArchivedGeometryWidget.h (ArchivedGeometryWidget): Add
	notificationTarget and destroyNotificationMethod variables, and
	declare setupDestroyNotification.

	* CanvasItem.m ([CanvasItem -createBindings]): Constify temp.

1998-01-11  Alex Lancaster  <alex@santafe.edu>

	* Canvas.m: ([Canvas -drop]): Added "destroy" Tk command to
	drop canvas when it is dropped, in the same way as a BLTGraph.

1998-01-05  Marcus G. Daniels  <mgd@wijiji.santafe.edu>

	* Histo.h (Histo): Subclass from ArchivedGeometryWidget.
	* Canvas.h (Canvas): Likewise.

	* BLTGraph.m ([GraphElement -createEnd]): Use different code
	for setting active line width and symbol between BLT 2.1 and BLT 2.3.
	([GraphElement -setColor:]): Set the active line color to be the
	same as the inactive line color.  Different versions for BLT 2.1
	and BLT 2.3.

	* DragDrop.m (new_BLT_p): Remove.
	(setupDragAndDrop): Use newBLTp method now in TkExtra.